# ma-logger

./: .gitignore  .pre-commit-config.yaml  Logging Best Practices.md  Python Code Standards Guide.md  README.md  pyproject.toml
.github/workflows/: pre-commit.yml  tests.yml
ma_logger/: __init__.py  decorators.py  filters.py  formatters.py  setup.py  utils.py
tests/: test_decorator.py  test_filters.py  test_formatters.py  test_setup_custom.py  test_setup_defaults.py
